--- a/cake/templates/index.html
+++ b/cake/templates/index.html
@@ -37,6 +37,22 @@
 
 <!-- Offcanvas Menu Begin -->
 <div class="offcanvas-menu-overlay"></div>
+<div class="offcanvas-menu-wrapper">
+    <div class="offcanvas__cart">
+        <div class="offcanvas__cart__links">
+            <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
+        </div>
+
+        <div class="offcanvas__cart__item">
+            <div class="cart__price"><a href=""><span>Sign In</span></a></div>
+        </div>
+    </div>
+    <div class="offcanvas__logo">
+        <a href="./index.html"><img src="{% static 'img/logo.png' %}" alt=""></a>
+    </div>
+    <div id="mobile-menu-wrap"></div>
+
+</div>
 
 <!-- Offcanvas Menu End -->
 
