--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -8,9 +8,9 @@
 <meta name="keywords" content="Credit Login / Register Form Responsive Widget,Login form widgets, Sign up Web forms , Login signup Responsive web form,Flat Pricing table,Flat Drop downs,Registration Forms,News letter Forms,Elements" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- Custom Theme files -->
-<link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet" type="text/css" media="all">
-<link href="{% static 'css/popuo-box.css' %}" rel="stylesheet" type="text/css" media="all" />
-<link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
+<link href="{% static 'user_css/font-awesome.min.css' %}" rel="stylesheet" type="text/css" media="all">
+<link href="{% static 'user_css/popuo-box.css' %}" rel="stylesheet" type="text/css" media="all" />
+<link href="{% static 'user_css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
 <!-- //Custom Theme files -->
 <!-- web font -->
 <link href="//fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet">
@@ -64,9 +64,9 @@
 		</p>
 	</div>
 	<!-- //copyright --> 
-	<script type="text/javascript" src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'user_js/jquery-2.1.4.min.js' %}"></script>
 	<!-- pop-up-box -->  
-		<script src="{% static 'js/jquery.magnific-popup.js' %}" type="text/javascript"></script>
+		<script src="{% static 'user_js/jquery.magnific-popup.js' %}" type="text/javascript"></script>
 	<!--//pop-up-box -->
 	<script>
 		$(document).ready(function() {
