Update HTML files

--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -42,7 +42,7 @@
 				</div>
 				</div>
 				<p class="p-bottom-w3ls">Are you new user?<a href="{% url 'register' %}">  Register here</a></p>
-				
+				<p class="p-bottom-w3ls"><a href="{% url 'index' %}"> Back to Home</a></p>
 				<div class="submit-w3l">
 					<input type="submit" value="Sign In">
 				</div>
