--- a/user/templates/register.html
+++ b/user/templates/register.html
@@ -63,6 +63,7 @@
             </div>
             <p class="p-bottom-w3ls">Existing user?<a href="{% url 'login' %}"> Login
                 here</a></p>
+            <p class="p-bottom-w3ls"><a href="{% url 'index' %}"> Back to Home</a></p>
 
             <div class="submit-w3l">
                 <input type="submit" value="Sign In">
