--- a/cake/templates/header.html
+++ b/cake/templates/header.html
@@ -1,5 +1,20 @@
 {% load static %}
+<div class="offcanvas-menu-wrapper">
+    <div class="offcanvas__cart">
+        <div class="offcanvas__cart__links">
+            <a href="#" class="search-switch"></a>
+        </div>
 
+        <div class="offcanvas__cart__item">
+            <div class="cart__price"><a href=""><span>Sign In</span></a></div>
+        </div>
+    </div>
+    <div class="offcanvas__logo">
+        <a href=""><img src="{% static 'img/logo.png' %}" alt=""></a>
+    </div>
+    <div id="mobile-menu-wrap"></div>
+
+</div>
 <header class="header">
     <div class="header__top">
         <div class="container">
@@ -7,7 +22,7 @@
                 <div class="col-lg-12">
                     <div class="header__top__inner">
                         <div class="header__logo">
-                            <a href="./index.html"><img src="{% static 'img/logo.png' %}" alt=""></a>
+                            <a href="#"><img src="{% static 'img/logo.png' %}" alt=""></a>
                         </div>
                         <div class="header__top__right">
                             {% if user.is_authenticated %}
